2015-10-20  Moritz Bunkus  <moritz@bunkus.org>

        * EbmlElement::ReadCodedSizeValue(): Fixed an invalid memory
        access. When reading a EBML variable length integer value a read
        access beyond the end of the available buffer was possible if
        fewer bytes were available than indicated by the first byte
        resulting in a heap information leak.

        * EbmlUnicodeString::UpdateFromUTF8(): Fixed an invalid memory
        access. When reading from a UTF-8 string in which the length
        indicated by a UTF-8 character's first byte exceeds the string's
        actual number of bytes the parser would access beyond the end of
        the string resulting in a heap information leak. Fixes the issue
        reported as Cisco TALOS-CAN-0036.

2015-10-17  Moritz Bunkus  <moritz@bunkus.org>

        * Released v1.3.2.

2015-08-21  Steve Lhomme <robUx4@gmail.com>

        * EbmlElement::FindNextElement(): Handle EOF when reading the
        element size properly.

2015-06-15  Steve Lhomme <robUx4@gmail.com

        * Disable debug code for builds for the Windows App Store.

2015-06-12  Cristian Morales Vega <reddwarf@opensuse.org>

        * Update the license information: use latest official text for the
        LGPL.

2015-02-23  Steve Lhomme  <robux4@gmail.com>

        * EbmlString::ValidateSize(): only allow the same maximum size as
        EbmlBinary.

2015-01-04  Moritz Bunkus  <moritz@bunkus.org>

        * Released v1.3.1.

        * EbmlElement::Render(): doesn't catch exceptions anymore. Instead
        exceptions generated from the IOCallback class (e.g. if a write
        failed) are propagated to the caller.

2014-12-21  Moritz Bunkus  <moritz@bunkus.org>

        * build system: switched the build system from hand-crafted
        Makefiles to an autoconf/automake-based system. A pkg-config file
        will be installed as well; its name is »libebml«. Patch by Jan
        Engelhardt <jengelh@inai.de>.
